--- a/jsf-webapp/src/main/webapp/remove.xhtml
+++ b/jsf-webapp/src/main/webapp/remove.xhtml
@@ -1,43 +1,36 @@
-<!DOCTYPE html>
-<html lang="en"
+<ui:composition template="layout.xhtml"
     xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-<title>Title</title>
-<link href="#{request.contextPath}/resources/css/bootstrap.min.css" rel="stylesheet"/>
-<script src="#{request.contextPath}/resources/js/jquery.slim.min.js"></script>
-<script src="#{request.contextPath}/resources/js/popper.min.js"></script>
-</h:head>
-<h:body>
-    <f:metadata>
-        <f:viewParam name="id" value="#{customerController.id}" />
-        <f:viewAction action="#{customerController.findCustomerById()}"/>
-    </f:metadata>
-    <div class="container">
-        <div class="jumbotron">
-            <h1 class="display-4">Title</h1>
-            <p class="lead">Subtitle</p>
-            <hr class="my-4"/>
+    xmlns:ui="http://java.sun.com/jsf/facelets"
+    xmlns:p="http://primefaces.prime.com.tr/ui"
+    xmlns:f="http://java.sun.com/jsf/core"
+    xmlns:h="http://java.sun.com/jsf/html">
+    
+    <ui:define name="title">Delete customer profile</ui:define>
+
+    <ui:define name="content">
+
+        <div class="container">
+            <f:metadata>
+                <f:viewParam name="id" value="#{customerController.id}" />
+                <f:viewAction action="#{customerController.findCustomerById()}"/>
+            </f:metadata>
+                    
+            <div>
+                <h2>Do you really want to remove the following customer?</h2><br/>
+                <h:outputText value="#{customerController.customer.title}"/>&#160;
+                <h:outputText value="#{customerController.customer.firstName}"/>&#160;
+                <h:outputText value="#{customerController.customer.lastName}"/>&#160;
+                <br/>
+                <h:outputText value="Email: #{customerController.customer.email}"/>
+            </div>
+            <h:form id="removeCustomer" styleClass="form-horizontal">
+                <br/>
+                <h:inputHidden value="${customerController.id}" /><!-- pass parameter in POST request -->
+                <h:commandButton styleClass="btn btn-sm btn-primary" action="#{customerController.remove()}" value="Remove" />
+                &#160;
+                <h:commandButton styleClass="btn btn-sm  btn-primary" action="#{customerController.cancel()}" immediate="true" value="Cancel"/>
+            </h:form>        
         </div>
-        <div>
-            <h2>Do you really want to remove the following customer?</h2><br/>
-            <h:outputText value="#{customerController.customer.title}"/>&#160;
-            <h:outputText value="#{customerController.customer.firstName}"/>&#160;
-            <h:outputText value="#{customerController.customer.lastName}"/>&#160;
-            <br/>
-            <h:outputText value="Email: #{customerController.customer.email}"/>
-        </div>
-        <h:form id="removeCustomer" styleClass="form-horizontal">
-            <br/>
-            <h:inputHidden value="${customerController.id}" /><!-- pass parameter in POST request -->
-            <h:commandButton styleClass="btn btn-sm btn-primary" action="#{customerController.remove()}" value="Remove" />
-            &#160;
-            <h:commandButton styleClass="btn btn-sm  btn-primary" action="#{customerController.cancel()}" immediate="true" value="Cancel"/>
-        </h:form>
-    </div>
-</h:body>
-</html>
+
+    </ui:define>
+</ui:composition>
