Add message bundles

--- a/jsf-webapp/src/main/webapp/header.xhtml
+++ b/jsf-webapp/src/main/webapp/header.xhtml
@@ -4,9 +4,9 @@
 <body>
     <!-- ALL TAGS ABOVE THIS LINE WILL BE REMOVED BY JSF -->
     <ui:composition>
-        <div class="jumbotron">
-            <h1 class="display-4">Title</h1>
-            <p class="lead">Subtitle</p>
+        <div class="jumbotron" style="background-image: url('#{request.contextPath}/resources/images/banner.jpg');">
+            <h1 class="display-4"><b>JSF Customer Management</b></h1>
+            <p class="lead">CRUD</p>
             <hr class="my-4"/>
         </div>
     </ui:composition>
