--- a/jsf-webapp/src/main/webapp/index.xhtml
+++ b/jsf-webapp/src/main/webapp/index.xhtml
@@ -9,59 +9,59 @@
         <f:viewParam name="page" value="#{customerController.page}" />
     </f:metadata>
     
-    <ui:define name="title">City Setup</ui:define>
+    <ui:define name="title"><h:outputText value="#{msg['customers']}" /></ui:define>
 
     <ui:define name="content">
         <div class="d-flex">
-            <div class="p-2 mr-auto"><h2>Customers</h2></div>
+            <div class="p-2 mr-auto"><h2><h:outputText value="#{msg['customers']}" /></h2></div>
             <div class="p-2">
-                <h:link styleClass="btn btn-sm btn-success" outcome="create.xhtml">Create new customer</h:link
+                <h:link styleClass="btn btn-sm btn-success" outcome="create.xhtml"><h:outputText value = "#{msg['customers.create.new']}" /></h:link
             ></div>
         </div>
         <!-- table of customers -->
         <h:dataTable id="customerTable" binding="#{table}" value="#{customerController.findAllCustomers()}" var="customer" class="table table-striped table-sm" >
             <h:column>
-                <f:facet name="header">Index</f:facet>
+                <f:facet name="header"><h:outputText value="#{msg['customers.index']}"/></f:facet>
                 <h:outputText value="#{table.rowIndex + 1}"/>
             </h:column>
             <h:column>
-                <f:facet name="header">Title</f:facet>
+                <f:facet name="header"><h:outputText value="#{msg['customers.title']}"/></f:facet>
                 <h:outputText value="#{customer.title}"/>
             </h:column>
             <h:column>
-                <f:facet name="header">First name</f:facet>
+                <f:facet name="header"><h:outputText value="#{msg['customers.firstname']}"/></f:facet>
                 <h:outputText value="#{customer.firstName}"/>
             </h:column>
             <h:column>
-                <f:facet name="header">Last name</f:facet>
+                <f:facet name="header"><h:outputText value="#{msg['customers.lastname']}"/></f:facet>
                 <h:outputText value="#{customer.lastName}"/>
             </h:column>
             <h:column>
-                <f:facet name="header">Email</f:facet>
+                <f:facet name="header"><h:outputText value="#{msg['customers.email']}"/></f:facet>
                 <h:outputText value="#{customer.email}"/>
             </h:column>
             <h:column>
-                <f:facet name="header">Birthdate</f:facet>
+                <f:facet name="header"><h:outputText value="#{msg['customers.birthday']}"/></f:facet>
                 <h:outputText value="#{customer.birthDate}"/>
             </h:column>
             <h:column>
                 <!-- edit action --> 
-                <f:facet name="header">Action</f:facet>
-                <h:link styleClass="btn btn-sm btn-warning" outcome="edit.xhtml">
+                <f:facet name="header"><h:outputText value="#{msg['customers.action']}"/></f:facet>
+                <h:link outcome="edit.xhtml">
                     <f:param name="id" value="#{customer.id}" />
-                    &#160; Edit &#160;
+                    <i class="fas fa-edit"></i>
                 </h:link>
                 &#160;&#160;
                 <!-- remove action -->
-                <h:link styleClass="btn btn-sm btn-danger" outcome="remove.xhtml">
+                <h:link outcome="remove.xhtml">
                     <f:param name="id" value="#{customer.id}" />
-                    Remove
+                    <i class="fas fa-trash-alt"></i>
                 </h:link>
                 &#160;&#160;
                 <!-- remove action -->
-                <h:link styleClass="btn btn-sm btn-info" outcome="detail.xhtml">
+                <h:link outcome="detail.xhtml">
                     <f:param name="id" value="#{customer.id}" />
-                    Detail
+                    <i class="fas fa-info"></i>
                 </h:link>
             </h:column>
         </h:dataTable>
@@ -71,10 +71,9 @@
                 &#124;&#60;  <!--first-->
                 <f:param name="page" value="1" />
             </h:link>
-            &#160;
+            <!-- &#160; -->
             <h:link styleClass="btn btn-sm btn-info" outcome="index.xhtml">
                 &#60; <!--previous-->
-                <!-- <f:param name="page" value="#{customerController.page-1}" /> -->
                 <f:param name="page" value="#{customerController.page > 1 ? customerController.page - 1 : 1}" />
             </h:link>
             &#160;
@@ -82,9 +81,9 @@
             &#160;     
             <h:link styleClass="btn btn-sm btn-info" outcome="index.xhtml">
                 &#62; <!--next-->
-                <f:param name="page" value="#{customerController.page+1}" />
+                <f:param name="page" value="#{customerController.page lt customerController.pageCount ? customerController.page + 1 : customerController.pageCount}" />
             </h:link> 
-            &#160;       
+            <!-- &#160; -->
             <h:link styleClass="btn btn-sm btn-info" outcome="index.xhtml">
                 &#62;&#124;  <!--last-->
                 <f:param name="page" value="-1" />
