--- a/jsf-webapp/src/main/webapp/layout.xhtml
+++ b/jsf-webapp/src/main/webapp/layout.xhtml
@@ -4,6 +4,7 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:ui="http://java.sun.com/jsf/facelets">
+<f:view locale="#{localeController.locale}">
 <h:head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -40,4 +41,6 @@
     </div>
 
 </h:body>
+
+</f:view>
 </html>
