--- a/jsf-webapp/src/main/webapp/layout.xhtml
+++ b/jsf-webapp/src/main/webapp/layout.xhtml
@@ -16,6 +16,9 @@
     <script src="#{request.contextPath}/resources/js/jquery.slim.min.js"></script>
     <script src="#{request.contextPath}/resources/js/popper.min.js"></script>
 </h:head>
+
+<!-- <f:loadBundle basename="com.example.webapp.i18n.messages" var="msg"/> -->
+
 <h:body>
 
     <div class="container">
