--- a/simple-jsf-webapp/src/main/webapp/index.xhtml
+++ b/simple-jsf-webapp/src/main/webapp/index.xhtml
@@ -5,7 +5,7 @@
         <title>Hello JSF 2!</title>
     </head>
     <body>
-       #{welcome.message}
+       <p><span style="color: red;">#{welcome.message}</span></p> 
        <p><span style="color: blue;">#{helloWorld.text}</span></p> 
     </body>
 </html>
