--- a/jsf-webapp/src/main/webapp/footer.xhtml
+++ b/jsf-webapp/src/main/webapp/footer.xhtml
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://java.sun.com/jsf/html">
 <body>
     <!-- ALL TAGS ABOVE THIS LINE WILL BE REMOVED BY JSF -->
     <ui:composition>
         <div class="text-center">    
-            JSF CRUD example
+            <h:outputText value="#{facesContext.externalContext.initParameterMap['PROJECT_NAME']}"/>
         </div>
     </ui:composition>
     <!-- ALL TAGS BELOW THIS LINE WILL BE REMOVED BY JSF -->
