--- a/jsf-webapp/src/main/webapp/layout.xhtml
+++ b/jsf-webapp/src/main/webapp/layout.xhtml
@@ -10,7 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 
+    <ui:insert name="meta"></ui:insert>
+    
     <title><ui:insert name="title">Layout</ui:insert></title>
+
     <link href="#{request.contextPath}/resources/css/bootstrap/bootstrap.min.css" rel="stylesheet"/>
     <link href="#{request.contextPath}/resources/css/fontawesome/css/all.min.css" rel="stylesheet"/>
     <script src="#{request.contextPath}/resources/js/jquery.slim.min.js"></script>
