--- a/jsf-webapp/src/main/webapp/header.xhtml
+++ b/jsf-webapp/src/main/webapp/header.xhtml
@@ -12,6 +12,8 @@
             <hr class="my-4"/>
             <div class="text-left">
                 <h:link styleClass="btn btn-default h1" outcome="index.xhtml?faces-redirect=true" value="Home"/>
+                &nbsp;
+                <h:link styleClass="btn btn-default h1" outcome="shop.xhtml?faces-redirect=true" value="Shop"/>
             </div>
             <div class="text-right">
                 <h:form id="languageForm">
